added background images and menu labels

--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
   </head>
 
   <body>
-    <header></header>
     <span class="hamburger"><i class="fas fa-bars fa-2x men"></i></span>
 
     <div class="menu">
-      <span class="cancel-box"
-        ><i class="fas fa-times fa-2x cancel-icon"></i
-      ></span>
+      <span class="cancel-box"></span>
       <div class="menu-box">
         <div class="row r-chip-1">
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="1" class="box text-center">
               <i class="fas fa-home icon"></i>
+              <p class="menu-label">HOME</p>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="2" class="box text-center">
               <i class="fas fa-landmark icon"></i>
+              <p class="menu-label">ABOUT</p>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="3" class="box text-center">
               <i class="far fa-image icon"></i>
+              <p class="menu-label">PHOTOS</p>
             </div>
           </div>
         </div>
@@ -88,23 +88,26 @@
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="4" class="box text-center">
               <i class="fas fa-users icon"></i>
+              <p class="menu-label">TEAM</p>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="5" class="box text-center">
               <i class="fas fa-video icon"></i>
+              <p class="menu-label">VIDEOS</p>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-4">
             <div id="6" class="box text-center">
               <i class="fas fa-map-marker-alt icon"></i>
+              <p class="menu-label">CONTACT</p>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="page home">
+    <section class="page home">
       <div class="main-heading">
         <div class="row">
           <div
@@ -120,11 +123,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="page e_about"></section>
-    <section class="page e_gallery"></section>
-    <section class="page e_services"></section>
-    <section class="page e_contact"></section>
+    <section class="page e_photos"></section>
+    <section class="page e_team"></section>
+    <section class="page e_videos"></section>
     <section class="page e_contact"></section>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
